@@ -12,7 +12,7 @@ PKG_IS_ADDON="yes"
 PKG_ADDON_NAME="qBittorrent"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_MAINTAINER="thoradia"
-PKG_REV="2"
+PKG_REV="3"
 PKG_SHORTDESC="$PKG_ADDON_NAME: efficient feature complete C++ bittorrent implementation"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) is an efficient feature complete C++ bittorrent implementation"
 PKG_DISCLAIMER="Keep it legal and carry on"
